# cpplogging

./: .gitignore  .travis.yml  CMakeLists.txt  Makefile  README.md  format-sources.sh  testlog.cpp
src/: LogMessage.cpp  LogMessage.hpp  StackTrace.cpp  StreamAppender.cpp  Time.cpp  UdpAppender.cpp
test/: testlog.cpp
